--- a/app/src/main/res/layout/custom_view.xml
+++ b/app/src/main/res/layout/custom_view.xml
@@ -32,9 +32,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toEndOf="@id/cbStatus"
-
             app:layout_constraintTop_toTopOf="@id/cbStatus"
             app:layout_constraintBottom_toBottomOf="@id/cbStatus"/>
+
         <TextView
             android:id="@+id/tvName"
             android:layout_width="0dp"
@@ -50,6 +50,24 @@
             app:layout_constraintStart_toEndOf="@id/tvId"
             app:layout_constraintTop_toTopOf="@id/cbStatus"
             app:layout_constraintBottom_toBottomOf="@id/cbStatus"
+
+            />
+        <TextView
+            android:id="@+id/tvStatus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:text="Статус"
+            android:inputType="text"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toTopOf="@id/cbStatus"
+            app:layout_constraintBottom_toBottomOf="@id/cbStatus"
+            app:layout_constraintEnd_toEndOf="parent"
+
 
             />
 
