--- a/app/src/main/res/layout/detaile_dialog.xml
+++ b/app/src/main/res/layout/detaile_dialog.xml
@@ -28,34 +28,12 @@
         app:layout_constraintTop_toBottomOf="@id/tv_nametask_details"
         app:layout_constraintEnd_toEndOf="parent"
         />
-    <TextView
-        android:id="@+id/tv_descriptiontask_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Детали"
-        android:textSize="20dp"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_nametask_details"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-    <EditText
-        android:id="@+id/et_descriptiontask_details"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Задача"
-        android:inputType="textMultiLine"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_descriptiontask_details"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_descriptiontask_details">
+        app:layout_constraintTop_toBottomOf="@id/et_nametask_details">
 
 
         <ImageButton
