--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,13 +57,25 @@
         tools:listitem="@layout/custom_view"/>
     <Button
         android:text="Добавить"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:id="@+id/btn"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_del_compl"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="8dp"/>
+    <Button
+        android:text="Готово"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_del_compl"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@id/btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        android:drawableLeft="@drawable/ic_delete_white"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
