--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,27 +56,43 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@id/btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_task_count"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/custom_view"/>
     <Button
-        android:text="Добавить"
+        android:text="Все"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:id="@+id/btn"
+        android:id="@+id/btn_set_all_check"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_del_compl"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="8dp"/>
+        app:layout_constraintEnd_toStartOf="@id/btn"
+        android:layout_marginEnd="8dp"
+        android:drawableLeft="@drawable/ic_all_check"/>
+
+    <ImageButton
+        android:src="@drawable/ic_add"
+        android:background="@color/purple_700"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/btn"
+        android:layout_marginTop="8dp"
+
+        app:layout_constraintStart_toEndOf="@id/btn_set_all_check"
+        app:layout_constraintBottom_toBottomOf="@id/btn_del_compl"
+        app:layout_constraintEnd_toStartOf="@id/btn_del_compl"
+        app:layout_constraintTop_toTopOf="@id/btn_del_compl"
+        android:layout_marginVertical="8dp"/>
     <Button
         android:text="Готово"
         android:layout_width="130dp"
@@ -89,4 +105,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="8dp"
         android:drawableLeft="@drawable/ic_delete_white"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
