add funs with json

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+
         android:orientation="horizontal">
         <RadioButton
             android:id="@+id/btn_all"
@@ -40,6 +40,18 @@
             android:layout_weight="1"/>
 
     </RadioGroup>
+    <Button
+        android:id="@+id/btn_cat"
+        android:text="Кот"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_task_count"
+        app:layout_constraintTop_toTopOf="@id/tv_task_count"
+        app:layout_constraintBottom_toBottomOf="@id/tv_task_count"
+
+        android:layout_margin="8dp"
+        />
     <TextView
         android:id="@+id/tv_task_count"
         android:layout_width="wrap_content"
@@ -100,7 +112,6 @@
         android:id="@+id/btn_del_compl"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="8dp"
