--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,18 +40,7 @@
             android:layout_weight="1"/>
 
     </RadioGroup>
-    <Button
-        android:id="@+id/btn_cat"
-        android:text="Кот"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_task_count"
-        app:layout_constraintTop_toTopOf="@id/tv_task_count"
-        app:layout_constraintBottom_toBottomOf="@id/tv_task_count"
 
-        android:layout_margin="8dp"
-        />
     <TextView
         android:id="@+id/tv_task_count"
         android:layout_width="wrap_content"
@@ -79,42 +68,33 @@
         app:layout_constraintTop_toBottomOf="@id/tv_task_count"
         app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/custom_view"/>
+
     <Button
-        android:text="Все"
-        android:layout_width="125dp"
+        android:id="@+id/btn"
+        android:text="Добавить"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_set_all_check"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn"
-        android:layout_marginEnd="8dp"
-        android:drawableLeft="@drawable/ic_all_check"/>
-
-    <ImageButton
-        android:src="@drawable/ic_add"
-        android:background="@color/purple_700"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:id="@+id/btn"
-        android:layout_marginTop="8dp"
-
-        app:layout_constraintStart_toEndOf="@id/btn_set_all_check"
-        app:layout_constraintBottom_toBottomOf="@id/btn_del_compl"
         app:layout_constraintEnd_toStartOf="@id/btn_del_compl"
-        app:layout_constraintTop_toTopOf="@id/btn_del_compl"
-        android:layout_marginVertical="8dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        android:drawableLeft="@drawable/ic_add"
+        android:layout_marginHorizontal="20dp"/>
     <Button
-        android:text="Готово"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
+
         android:id="@+id/btn_del_compl"
+        android:text="Готово"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="8dp"
-        android:drawableLeft="@drawable/ic_delete_white"/>
+        android:drawableLeft="@drawable/ic_delete_white"
+        android:layout_marginHorizontal="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
